# PixelWatch

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: router.py
app/api/routes/: __init__.py  diffs.py  monitors.py  notifications.py  screenshots.py
app/core/: __init__.py  celery_app.py  config.py  database.py  statuses.py  timezone.py
app/models/: __init__.py  notification.py  page_monitor.py  screenshot.py  visual_diff.py
app/schemas/: __init__.py  notification.py  page_monitor.py  screenshot.py  visual_diff.py
app/services/: __init__.py  diff_service.py  monitor_service.py  notification_service.py  screenshot_service.py
app/tasks/: monitor_tasks.py
app/web/: __init__.py  routes.py
app/web/static/: styles.css
app/web/templates/: base.html  index.html  monitor_detail.html  monitor_form.html  notifications.html
migrations/: env.py
migrations/versions/: 20260514_0001_initial.py  20260514_0002_hybrid_change_signals.py
tests/: conftest.py  test_diff_service.py  test_monitors.py  test_notifications.py
