[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelwatch"
version = "0.1.0"
description = "PixelWatch — сервис мониторинга визуальных изменений сайтов"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "celery[redis]>=5.4.0",
  "fastapi>=0.111.0",
  "jinja2>=3.1.4",
  "pillow>=10.3.0",
  "playwright>=1.45.0",
  "psycopg[binary]>=3.1.19",
  "pydantic-settings>=2.3.4",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.1",
]

[project.optional-dependencies]
dev = [
  "black>=24.4.2",
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.1",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]
